[gd_scene load_steps=23 format=3 uid="uid://bt80hia8m324t"]

[ext_resource type="Script" path="res://Characters/frog.gd" id="1_4rrcl"]
[ext_resource type="Texture2D" uid="uid://tc1848klkr6" path="res://Assets/Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/enemy-deadth.png" id="1_ojreg"]
[ext_resource type="Texture2D" uid="uid://bnhll3srb4vqd" path="res://Assets/Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-idle.png" id="2_abai6"]
[ext_resource type="Texture2D" uid="uid://dcygp1xbejdh5" path="res://Assets/Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-jump.png" id="3_r4bi8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x0qc1"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_lrlqj"]
atlas = ExtResource("1_ojreg")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixwug"]
atlas = ExtResource("1_ojreg")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll41w"]
atlas = ExtResource("1_ojreg")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc2y7"]
atlas = ExtResource("1_ojreg")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v6s7"]
atlas = ExtResource("1_ojreg")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_shh7b"]
atlas = ExtResource("1_ojreg")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhnp2"]
atlas = ExtResource("2_abai6")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv6px"]
atlas = ExtResource("2_abai6")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejjhr"]
atlas = ExtResource("2_abai6")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yo4p"]
atlas = ExtResource("2_abai6")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5x17"]
atlas = ExtResource("3_r4bi8")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxv0l"]
atlas = ExtResource("3_r4bi8")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ot1p"]
atlas = ExtResource("3_r4bi8")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_i7rys"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrlqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixwug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll41w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc2y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v6s7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shh7b")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhnp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv6px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejjhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yo4p")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5x17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxv0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ot1p")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vfb3e"]
radius = 186.043

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5oamg"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_da5b1"]
size = Vector2(21, 11)

[node name="Frog" type="CharacterBody2D"]
position = Vector2(0, -11)
script = ExtResource("1_4rrcl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_x0qc1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i7rys")
animation = &"Idle"

[node name="PlayerDetection" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_vfb3e")

[node name="PlayerAttackedDetection" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerAttackedDetection"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_5oamg")

[node name="PlayerAttack" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerAttack"]
position = Vector2(-1.5, 4.5)
shape = SubResource("RectangleShape2D_da5b1")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerAttackedDetection" to="." method="_on_player_attacked_detection_body_entered"]
[connection signal="body_entered" from="PlayerAttack" to="." method="_on_player_attack_body_entered"]
